--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cmdk": "1.1.1",
     "date-fns": "4.1.0",
     "dotenv": "^17.2.4",
+    "driver.js": "^1.4.0",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.544.0",
