--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,9 @@
-# matri-x environment variables
-# Copy this to .env and fill in the values
+# Database (Supabase PostgreSQL)
+DATABASE_URL="postgresql://postgres:[PASSWORD]@db.[PROJECT_REF].supabase.co:6543/postgres?pgbouncer=true"
+DIRECT_URL="postgresql://postgres:[PASSWORD]@db.[PROJECT_REF].supabase.co:5432/postgres"
 
-DATABASE_URL="file:./dev.db"
-NEXTAUTH_SECRET="generate-with-openssl-rand-base64-48"
-NEXTAUTH_URL="http://localhost:3456"
-AUTH_SECRET="same-as-NEXTAUTH_SECRET"
+# Auth
+NEXTAUTH_SECRET="generate-with-openssl-rand-base64-32"
+NEXTAUTH_URL="https://your-domain.com"
+AUTH_SECRET="same-as-nextauth-secret"
 AUTH_TRUST_HOST=true
-
-# Optional: Google OAuth
-# GOOGLE_CLIENT_ID=""
-# GOOGLE_CLIENT_SECRET=""
-
-# Optional: Admin seed password
-# ADMIN_SEED_PASSWORD=""
