chore: SQLite → PostgreSQL migration prep for Vercel + Supabase
- Prisma schema: sqlite → postgresql with @db.Text annotations
- Added directUrl for Supabase connection pooling
- Added postinstall: prisma generate
- Build script: prisma generate && next build
- .env.example with Supabase template
- vercel.json added

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
-# Database (Supabase PostgreSQL)
-DATABASE_URL="postgresql://postgres:[PASSWORD]@db.[PROJECT_REF].supabase.co:6543/postgres?pgbouncer=true"
-DIRECT_URL="postgresql://postgres:[PASSWORD]@db.[PROJECT_REF].supabase.co:5432/postgres"
+# Environment variables
+# Copy to .env and fill in your values
 
-# Auth
-NEXTAUTH_SECRET="generate-with-openssl-rand-base64-32"
-NEXTAUTH_URL="https://your-domain.com"
-AUTH_SECRET="same-as-nextauth-secret"
+# PostgreSQL (Supabase) - Transaction pooler (port 6543)
+DATABASE_URL="postgresql://postgres.[PROJECT-REF]:[PASSWORD]@aws-0-ap-northeast-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+
+# PostgreSQL (Supabase) - Direct connection (port 5432, for migrations)
+DIRECT_URL="postgresql://postgres.[PROJECT-REF]:[PASSWORD]@aws-0-ap-northeast-1.pooler.supabase.com:5432/postgres"
+
+# NextAuth
+NEXTAUTH_SECRET="your-secret-here"
+NEXTAUTH_URL="https://matri-x-algo.wiki"
+AUTH_SECRET="your-secret-here"
 AUTH_TRUST_HOST=true
