--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 # PostgreSQL (Supabase) - Transaction pooler (port 6543)
 DATABASE_URL="postgresql://postgres.[PROJECT-REF]:[PASSWORD]@aws-0-ap-northeast-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
 
-# PostgreSQL (Supabase) - Direct connection (port 5432, for migrations)
+# PostgreSQL (Supabase) - Session pooler (port 5432, for migrations)
 DIRECT_URL="postgresql://postgres.[PROJECT-REF]:[PASSWORD]@aws-0-ap-northeast-1.pooler.supabase.com:5432/postgres"
 
 # NextAuth
@@ -12,3 +12,7 @@ NEXTAUTH_SECRET="your-secret-here"
 NEXTAUTH_URL="https://matri-x-algo.wiki"
 AUTH_SECRET="your-secret-here"
 AUTH_TRUST_HOST=true
+
+# Google OAuth
+GOOGLE_CLIENT_ID="your-google-client-id"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
